refactor: 💡 drafting final changes for payment

--- a/packages/components/Flatlist/FlatList.html
+++ b/packages/components/Flatlist/FlatList.html
@@ -57,7 +57,7 @@
 {/if}
 
 <script>
-  import { ENTER, KEYUP, KEYDOWN } from '@mamba/keyboard/native/keymap.js';
+  import { ENTER, KEYUP, KEYDOWN } from '@mamba/keyboard';
 
   import {
     selectRowItem,
