--- a/packages/components/Flatlist/NavBar.html
+++ b/packages/components/Flatlist/NavBar.html
@@ -14,7 +14,7 @@
 </div>
 
 <script>
-  import { KEYUP, KEYDOWN } from '@mamba/keyboard/native/keymap.js';
+  import { KEYUP, KEYDOWN } from '@mamba/keyboard';
 
   export default {
     components: {
