--- a/packages/components/Keyboard/KeyboardInput.html
+++ b/packages/components/Keyboard/KeyboardInput.html
@@ -33,151 +33,43 @@
     on:keyup
     on:input
 
-    on:submit="submit(event)"
+    on:submitValid
+    on:submitInvalid
   />
   <!-- <div ref:keyboardRoot class="mb-keyboard-input"></div> -->
 </div>
 
 <script>
   import Keyboard, { KeyboardType } from './lib/index.js';
-  import './css/KeyboardMathTheme.css';
+  // import './css/KeyboardThemeNumeric.css';
+  import './css/KeyboardThemeMath.css';
 
   export default {
     components: {
       Input: '@mamba/input/Input.html',
     },
     oncreate() {
-      // initAppSignals(this);
       // eslint-disable-next-line no-unused-vars
       const { /* keyboardRoot, */ inputComponent } = this.refs;
       // const { input: inputDOMElement } = inputComponent.refs;
 
-      // function setInputCaretPosition(elem, pos) {
-      //   if (elem.setSelectionRange) {
-      //     elem.focus();
-      //     elem.setSelectionRange(pos, pos);
-      //   }
-      // }
-
-      // function onChange(input) {
-      //   inputElement.value = input;
-      //   console.log('Input changed', input);
-
-      //   /**
-      //    * Synchronizing input caret position
-      //    */
-      //   // eslint-disable-next-line no-use-before-define
-      //   const { caretPosition } = keyboard;
-      //   if (caretPosition !== null) setInputCaretPosition(inputElement, caretPosition);
-
-      //   console.log('caretPosition', caretPosition);
-      // }
-
-      // function onKeyPress(button) {
-      //   console.log('Button pressed', button);
-      // }
-
-      // const keyboard = new Keyboard(keyboardRoot, {
-      //   onChange: (input) => onChange(input),
-      //   onKeyPress: (button) => onKeyPress(button),
-      //   layout: {
-      //     default: ['1 2 3', '4 5 6', '7 8 9', '{shift} 0 _', '{bksp}'],
-      //     shift: ['! / #', '$ % ^', '& * (', '{shift} ) +', '{bksp}'],
-      //   },
-      //   theme: 'mb-keyboard-default mb-layout-numeric numeric-theme',
-      // });
-
-      // inputElement.addEventListener('input', (event) => {
-      //   if (keyboard) keyboard.setInput(event.target.value);
-      // });
-
-      //
-
-      // function onChange(input, e) {
-      //   console.log('[onChange] Input changed', input, e);
-      //   // dispatchKeybaordEvent(inputDOMElement, '6', e);
-
-      //   // inputComponent.set({ value: input });
-
-      //   /* new InputEvent('input', {
-
-      //   }); */
-      // }
-
-      // function onKeyPress(button) {
-      //   console.log('[onKeyPress] Button pressed', button);
-      // }
-
-      // function onFunctionKeyPress(button, e) {
-      //   console.log('[onFunctionKeyPress] Button pressed', button, e);
-      // }
-
-      // const keyboard =
-
       new Keyboard({
-        // onChange: (input, e) => onChange(input, e),
-        // onKeyPress: (button, e) => onKeyPress(button, e),
-        // onFunctionKeyPress: (button, e) => onFunctionKeyPress(button, e),
-        // onRender: (instance) => {
-        //   console.log('[onRender]', instance);
-        // },
-        // onInit: (instance) => {
-        //   console.log('[onInit]', instance);
-        // },
+        // onChange: (input, e) => console.log('[onChange]', button, e);
+        // onKeyPress: (button, e) => console.log('[onKeyPress]', button, e);
+        // onFunctionKeyPress: (button, e) => console.log('[onFunctionKeyPress]', button, e);
+        // onRender: (instance) => console.log('[onRender]', instance);
+        // onInit: (instance) => console.log('[onInit]', instance);
         debug: __DEV__ || __DEBUG_LVL__ >= 3,
         keepVisible: true,
         // keyboardType: KeyboardType.Default,
-        // keyboardType: KeyboardType.Math,
-        keyboardType: KeyboardType.Numeric,
+        keyboardType: KeyboardType.Math,
+        // keyboardType: KeyboardType.Numeric,
+        // keyboardType: KeyboardType.Custom,
+        // keyboardType: KeyboardType.Phone,
         layoutSuggestions: {
           e: 'é',
         },
-        /* layout: {
-          default: [
-            'q w e r t y u i o p',
-            'a s d f g h j k l',
-            '{shift} z x c v b n m {backspace}',
-            '{alt} {space} {enter}',
-          ],
-          shift: [
-            'Q W E R T Y U I O P',
-            'A S D F G H J K L',
-            '{shift} Z X C V B N M {backspace}',
-            '{alt} {space} {enter}',
-          ],
-          alt: [
-            '1 2 3 4 5 6 7 8 9 0',
-            '- / : ; ( ) $ & @ "',
-            "{symbols} . , ? ! ' {backspace}",
-            '{default} {space} {enter}',
-          ],
-          symbols: [
-            '[ ] { } # % ^ * + =',
-            '_ \\ / | ~ < > • `',
-            "{altback} . , ? ! ' {backspace}",
-            '{default} {space} {enter}',
-          ],
-        }, */
       });
-
-      /**
-       * Update mamba-keyboard when input is changed directly
-       */
-      /* inputComponent.on('input', (event) => {
-        keyboard.setInput(event.target.value);
-      }); */
-    },
-    methods: {
-      submit(event) {
-        console.log('SUBMIT', event);
-      },
     },
   };
 </script>
-
-<style>
-  .mb-keyboard-bundle {
-    padding-top: 0px;
-    border-bottom: 1px solid $neutral200;
-  }
-</style>
