--- a/packages/components/Input/Money.html
+++ b/packages/components/Input/Money.html
@@ -12,15 +12,20 @@
   on:submit="_onSubmit()"
   on:submitValid="_onSubmitValid()"
   on:submitInvalid="_onSubmitInvalid()"
+  keyboardType={KeyboardType.Math}
 />
 
 <script>
   import Keyboard from '@mamba/keyboard/native/keyboard.js';
+  import { KeyboardType } from '@mamba/keyboard/lib/index.js';
   import { format as formatMoney } from '@mamba/utils/money.js';
 
   export default {
     components: {
       Input: './Input.html',
+    },
+    helpers: {
+      KeyboardType,
     },
     data() {
       return {
@@ -134,7 +139,8 @@
       },
       _onKeydown(e) {
         e.preventDefault();
-        const keyName = Keyboard.getKeyName(e.keyCode);
+        const keyCode = e.code && e.code !== 0 ? e.code : e.charCode || e.which || e.keyCode;
+        const keyName = Keyboard.getKeyName(keyCode);
         const { readonlyOnEnter } = this.get();
         let { value } = this.get();
         value = value.toString();
@@ -147,7 +153,7 @@
           this.makeReadOnly();
         }
 
-        if (Keyboard.isNumericKey(e.keyCode)) {
+        if (Keyboard.isNumericKey(keyCode)) {
           if (value === '0') {
             value = keyName;
           } else {
