--- a/packages/components/Keyboard/css/KeyboardThemeMath.css
+++ b/packages/components/Keyboard/css/KeyboardThemeMath.css
@@ -1,11 +1,20 @@
-.mb-keyboard-theme-default.mb-keyboard-theme-math {
+.mb-keyboard-theme-math {
   max-height: 252px;
   background-color: #f2f4f7;
   border-top: 1px solid $neutral300;
   padding: 8px 6px;
 
+  /* &.debug .mb-button {
+    outline: 0.1px solid red;
+  } */
+
   & .mb-row .mb-button,
   & .mb-button {
+    & span {
+      text-align: center;
+      margin: auto;
+    }
+
     &[data-mb-key='{backspace}'],
     &[data-mb-key='{clear}'],
     &[data-mb-key='{%}'],
@@ -25,13 +34,13 @@
 
     &[data-mb-key='{clear}'] {
       & span {
-        mask-image: url(../assets/mathClear.svg);
+        mask-image: url(../assets/math_clear.svg);
       }
     }
 
     &[data-mb-key='{÷}'] {
       & span {
-        mask-image: url(../assets/mathDivision.svg);
+        mask-image: url(../assets/math_division.svg);
       }
     }
 
@@ -39,7 +48,7 @@
       & span {
         max-width: 10px;
         max-height: 10px;
-        mask-image: url(../assets/mathDecimal.svg);
+        mask-image: url(../assets/math_decimal.svg);
       }
     }
 
@@ -49,7 +58,7 @@
         height: 18px;
         left: -1px;
         position: relative;
-        mask-image: url(../assets/mathBackspace.svg);
+        mask-image: url(../assets/math_backspace.svg);
       }
     }
 
@@ -57,7 +66,7 @@
       & span {
         width: 12px;
         height: 12px;
-        mask-image: url(../assets/mathMultiply.svg);
+        mask-image: url(../assets/math_multiply.svg);
       }
     }
 
@@ -65,13 +74,13 @@
       & span {
         width: 10px;
         height: 10px;
-        mask-image: url(../assets/mathMinus.svg);
+        mask-image: url(../assets/math_minus.svg);
       }
     }
 
     &[data-mb-key='{+}'] {
       & span {
-        mask-image: url(../assets/mathPlus.svg);
+        mask-image: url(../assets/math_plus.svg);
       }
     }
 
@@ -79,29 +88,24 @@
       & span {
         width: 19px;
         height: 19px;
-        mask-image: url(../assets/mathPercent.svg);
+        mask-image: url(../assets/math_percent.svg);
       }
     }
 
     &[data-mb-key='{=}'] {
       & span {
-        mask-image: url(../assets/mathEqual.svg);
+        mask-image: url(../assets/math_equal.svg);
       }
     }
 
     &[data-mb-key='{check}'] {
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-color: transparent;
-
       &.mb-active {
         opacity: 0.7;
       }
 
       & span {
-        min-width: 100%;
-        min-height: 100%;
-        background-image: url(../assets/checkSymbolRound.svg);
+        width: 100%;
+        height: 100%;
       }
     }
   }
@@ -116,17 +120,19 @@
   }
 
   &.mb-layout-horizontal .mb-row {
-    justify-content: space-around;
-
     & .mb-button {
       margin: 0;
       display: flex;
+      font-weight: 600;
+      font-size: 16px;
+      text-align: center;
 
       &.mb-standard-btn {
         background-color: white;
         border-color: #dbece6;
         border-width: 2px;
         border-style: solid;
+        color: #303742;
 
         &.mb-active {
           background-color: #dbece6;
@@ -183,15 +189,15 @@
   height: 252px;
 }
 
-.mb-keyboard-theme-default.mb-keyboard-theme-math {
+.mb-keyboard-theme-math {
   &.mb-layout-horizontal {
     & .mb-row {
       &:not(:last-child) {
         margin-bottom: 0;
       }
-      & .mb-button,
+
       & .mb-button:not(:last-child) {
-        margin-right: 0;
+        margin-right: 14px;
       }
     }
   }
