refactor: 💡 minimal docs and helper methods

--- a/packages/components/App/AdminLock.html
+++ b/packages/components/App/AdminLock.html
@@ -46,7 +46,7 @@
     },
     methods: {
       open() {
-        Keyboard.setKeyboardAsNumeric();
+        Keyboard.setKeyboardInputAsNumeric();
         this.set({ _showLockPopUp: true });
         this.refs.password.focus();
       },
