--- a/packages/components/Keyboard/StaticNumericKeyboard.html
+++ b/packages/components/Keyboard/StaticNumericKeyboard.html
@@ -2,27 +2,9 @@
   ! This keyboard doesn't have functionality. Is intended to use it was skin for backend touch keyboard.
  -->
 <div
-  class="mb-keyboard mb-keyboard-generic-wrapper debug mb-layout-name-math mb-layout-fixed mb-keyboard-theme-math"
+  class="mb-keyboard mb-keyboard-generic-wrapper debug mb-layout-name-numeric mb-layout-fixed mb-keyboard-theme-numeric"
 >
   <div class="mb-rows">
-    <div class="mb-row">
-      <div class="mb-cell">
-        <div class="mb-button mb-function-btn mb-button-clear" data-mb-key="{clear}">
-          <span>C</span>
-        </div>
-      </div>
-      <div class="mb-cell">
-        <div class="mb-button mb-function-btn mb-button-backspace" data-mb-key="{backspace}">
-          <span> </span>
-        </div>
-      </div>
-      <div class="mb-cell">
-        <div class="mb-button mb-function-btn mb-button-%" data-mb-key="{%}"><span>%</span></div>
-      </div>
-      <div class="mb-cell">
-        <div class="mb-button mb-function-btn mb-button-÷" data-mb-key="{÷}"><span>÷</span></div>
-      </div>
-    </div>
     <div class="mb-row">
       <div class="mb-cell">
         <div class="mb-button mb-standard-btn" data-mb-key="1"><span>1</span></div>
@@ -32,9 +14,6 @@
       </div>
       <div class="mb-cell">
         <div class="mb-button mb-standard-btn" data-mb-key="3"><span>3</span></div>
-      </div>
-      <div class="mb-cell">
-        <div class="mb-button mb-function-btn mb-button-×" data-mb-key="{×}"><span>×</span></div>
       </div>
     </div>
     <div class="mb-row">
@@ -47,9 +26,6 @@
       <div class="mb-cell">
         <div class="mb-button mb-standard-btn" data-mb-key="6"><span>6</span></div>
       </div>
-      <div class="mb-cell">
-        <div class="mb-button mb-function-btn mb-button-+" data-mb-key="{+}"><span>+</span></div>
-      </div>
     </div>
     <div class="mb-row">
       <div class="mb-cell">
@@ -61,19 +37,15 @@
       <div class="mb-cell">
         <div class="mb-button mb-standard-btn" data-mb-key="9"><span>9</span></div>
       </div>
-      <div class="mb-cell">
-        <div class="mb-button mb-function-btn mb-button-−" data-mb-key="{−}"><span>−</span></div>
-      </div>
     </div>
     <div class="mb-row">
       <div class="mb-cell">
-        <div class="mb-button mb-function-btn mb-button-." data-mb-key="{.}"><span>,</span></div>
+        <div class="mb-button mb-function-btn mb-button-backspace" data-mb-key="{backspace}">
+          <span> </span>
+        </div>
       </div>
       <div class="mb-cell">
         <div class="mb-button mb-standard-btn" data-mb-key="0"><span>0</span></div>
-      </div>
-      <div class="mb-cell">
-        <div class="mb-button mb-function-btn mb-button-=" data-mb-key="{=}"><span>=</span></div>
       </div>
       <div class="mb-cell">
         <div class="mb-button mb-function-btn mb-button-check" data-mb-key="{check}">
