--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -10,7 +10,7 @@
       class:has-right-sign="_hasRightSign"
       class:has-left-sign="_slots.leftSign"
     >
-      <div class="left-area">
+      <div class="left-area" style={hasActiveDisabled}>
         {#if _slots.leftSign}
           <div class="left-sign" ref:leftSign>
             <slot name="left-sign"></slot>
@@ -82,6 +82,7 @@
         bgColor: undefined,
         primaryColor: undefined,
         secondaryColor: undefined,
+        disabled: false,
         /** Private */
         _slots: {},
       };
@@ -95,6 +96,8 @@
         [secondaryColor && `color: ${secondaryColor}`].filter(Boolean).join(';'),
       _topStyle: ({ bgColor }) =>
         [bgColor && `background-color: ${bgColor}`].filter(Boolean).join(';'),
+      hasActiveDisabled: ({ disabled }) =>
+        [disabled && `color: #7D8BA1`].filter(Boolean).join(';'),
     },
     oncreate() {
       const hasSlots = !!this.options.slots;
