--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -56,6 +56,8 @@
 </div>
 
 <script>
+  import { neutral500 } from '@mamba/styles/colors';
+
   /* istanbul ignore next */
   function isChildOf(tgt, el) {
     if (!tgt || tgt.nodeType !== 1) return false;
@@ -96,8 +98,8 @@
         [secondaryColor && `color: ${secondaryColor}`].filter(Boolean).join(';'),
       _topStyle: ({ bgColor }) =>
         [bgColor && `background-color: ${bgColor}`].filter(Boolean).join(';'),
-      hasActiveDisabled: ({ disabled }) =>
-        [disabled && `color: #7D8BA1`].filter(Boolean).join(';'),
+      hasActiveDisabled: ({ disabled, neutral500 }) =>
+        [disabled && `color: ${neutral500}`].filter(Boolean).join(';'),
     },
     oncreate() {
       const hasSlots = !!this.options.slots;
