--- a/packages/components/Keyboard/Keyboard.html
+++ b/packages/components/Keyboard/Keyboard.html
@@ -1,12 +1,10 @@
 <script>
   import Keyboard from './lib/index.js';
-  import Api from './api/index.js';
   import './css/Keyboard.css';
   import './css/KeyboardThemeMath.css';
   import './css/KeyboardThemeNumeric.css';
   import './css/KeyboardThemePhone.css';
 
-  let firstLoad = true;
   let keyboard = null;
 
   export default {
@@ -18,12 +16,13 @@
       };
     },
     oncreate() {
-      this.root.on('router:change', () => {
-        if (firstLoad) return;
-        firstLoad = false;
+      this.root.on('router:change', (context = {}) => {
+        if (context.init) return;
+        if (context.canonicalPath.length === 1) return;
+
         try {
           if (!(document.activeElement instanceof HTMLInputElement)) {
-            Api.virtualKeyboard.reset();
+            keyboard.unmount();
           }
         } catch (_) {
           //
