--- a/packages/components/Keyboard/css/KeyboardThemeMath.css
+++ b/packages/components/Keyboard/css/KeyboardThemeMath.css
@@ -5,6 +5,17 @@
   border-top: 1px solid $neutral300;
   padding: 8px 6px;
 
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    background: $neutral100;
+    left: 0;
+    right: 0;
+    top: -2px;
+    height: 1px;
+  }
+
   $button-size: 42px;
 
   /* &.debug .mb-cell {
