fix: 🐛 model case

--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -56,7 +56,7 @@
 
       /** Add the mamba-app-container class to the root element */
       try {
-        target.classList.add('mamba-app-container', _kebabCase(this.get().model));
+        target.classList.add('mamba-app-container', _kebabCase(this.get().model).toUpperCase());
       } catch (e) {
         console.error(`Failed get pos model. ${e}`);
       }
