--- a/packages/components/Keyboard/Keyboard.html
+++ b/packages/components/Keyboard/Keyboard.html
@@ -22,6 +22,7 @@
 
         try {
           if (!(document.activeElement instanceof HTMLInputElement)) {
+            keyboard.resetOptions();
             keyboard.unmount();
           }
         } catch (_) {
