--- a/packages/components/Input/Money.html
+++ b/packages/components/Input/Money.html
@@ -12,7 +12,7 @@
   on:submit="_onSubmit()"
   on:submitValid="_onSubmitValid()"
   on:submitInvalid="_onSubmitInvalid()"
-  {keyboardType}
+  {keyboardOptions}
 />
 
 <script>
